# speech

./: .gitignore  .gitmodules  Makefile.am  NEWS  autogen.sh  configure.ac  debug.h
doc/: Makefile.in  doxygen.config.in  html.footer.in  html.header.in
res/: speechUI.css  speechUI.glade
src/: ApiType.h  Configuration.cpp  Configuration.h  CrossfadeProcessor.cpp  CrossfadeProcessor.h  Events.h  FFTJackClient.cpp  FFTJackClient.h  FFTJackClientStates.h  FFTJackProcessor.cpp  FFTJackProcessor.h  FIFOBufferJackProcessor.cpp  FIFOBufferJackProcessor.h  JackChunkAllocator.cpp  JackChunkAllocator.h  JackClient.cpp  JackClient.h  JackCrossfader.cpp  JackCrossfader.h  JackFIFOBuffer.cpp  JackFIFOBuffer.h  JackInput.cpp  JackInput.h  JackOutput.cpp  JackOutput.h  JackPorts.cpp  JackPorts.h  JackProcessor.cpp  JackProcessor.h  JackRecorder.cpp  JackRecorder.h  JackServerInput.cpp  JackServerInput.h  JackServerOutput.cpp  JackServerOutput.h  JackSilenceOutput.cpp  JackSilenceOutput.h  JackSwitch.cpp  JackSwitch.h  Makefile.am  (+21 more)
src/cwd/: Makefile.am  debug.cpp  debug.h  debug_ostream_operators.cc  debug_ostream_operators.cpp  debug_ostream_operators.h
